# ufc-crip

./: .gitignore  Cryptool.sln  README.md
Cryptool.Tests/: AutokeyTests.cs  CaesarTests.cs  Cryptool.Tests.csproj
Cryptool.Tests/src/: AutokeyTests.cs  CaesarTests.cs  ModernMathTests.cs  SanitizerTests.cs  SubstitutionTests.cs  VigenereTests.cs
Cryptool/src/: Program.cs  Verbs.cs
rsa/: .gitignore  README.md  pyproject.toml  requirements.txt
rsa/drsa/: __main__.py  main.py
rsa/drsa/cli/: __init__.py  parsing.py
rsa/drsa/math/: prime_generation.py
rsa/drsa/rsa/: __init__.py  encryption.py  key.py
rsa/sample/: ciphertext.txt  pri_key.txt  pub_key.txt
rsa/simplersa/: __main__.py  cli.py  eea.py  main.py  rsa.py
rsa/simplersa/cli/: __init__.py  conventions.py
rsa/simplersa/math/: __init__.py  eea.py  first_primes.py
rsa/simplersa/primes/: prime_generation.py
rsa/simplersa/rsa/: keygen.py
rsa/src/drsa/: __main__.py  main.py
rsa/src/drsa/cli/: __init__.py  conventions.py  parsing.py
rsa/src/drsa/math/: __init__.py  ec.py  eea.py  euclides.py  eulerphi.py  factorization.py  prime_generation.py  prime_sieve.py  primegen.py  sieving.py
rsa/src/drsa/rsa/: __init__.py  encoding.py  encryption.py  keygen.py  recovering.py
rsa/test/: test_ec.py  test_factoring.py
src/: CTMath.cs  Command.cs  Main.cs  Program.cs  SimpleRot.cs  SimpleSub.cs  Verbs.cs
src/Analisys/: DefaultTrigramsLists.cs  LanguageIdentifier.cs  TrigramList.cs
src/Classic/: AutoKey.cs  Caesar.cs  CaesarBruteForce.cs  ClassicMath.cs  Consts.cs
src/Simple/: Rot.cs  Sub.cs
(+19 files in other folders)
