[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "drsa"
version = "0.1"
authors = [{ name = "Diefesson" }]
dependencies = ["argparse ~= 1.4.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
drsa = "drsa.main:main"

[tool.setuptools.packages.find]
where = ["src"]
